--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-gm": "0.0.8",
     "gulp-image-resize": "^0.7.1",
     "gulp-imagemin": "^2.4.0",
+    "gulp-load-plugins": "^1.2.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.0.1",
     "gulp-sass": "^2.1.1",
